Single-pass pipeline redesign with map-map fusion
- Replaced multi-stage pipeline with single-pass execution model
- Added Transform sealed class (Map, Filter) stored as list
- Implemented map-map fusion to compose consecutive maps
- Updated API to Pipeline.of().map().filter().sink() style
- Updated README with new API and performance optimizations
- Deleted old architecture files (Pipe, FilterPipe, etc.)
- Benchmarks updated showing reduce now faster than Java Streams