@@ -1,5 +1,6 @@
 package me.theos.pipedream
 
+import io.reactivex.rxjava3.core.Flowable
 import org.openjdk.jmh.annotations.Benchmark
 import org.openjdk.jmh.annotations.BenchmarkMode
 import org.openjdk.jmh.annotations.Fork
@@ -16,20 +17,51 @@ import java.util.concurrent.TimeUnit
 @OutputTimeUnit(TimeUnit.SECONDS)
 @Warmup(iterations = 3, time = 1)
 @Measurement(iterations = 5, time = 1)
-@Fork(1, jvmArgsAppend = ["-Xmx512m", "-Xms512m", "-Xlog:gc*:file=gc.log"])
+@Fork(1, jvmArgsAppend = ["-Xmx512m", "-Xms512m"])
 open class PipelineBenchmark {
     private val list = (1..10000).map { "item$it" }
+
+    // ========== Pipedream ==========
 
     @Benchmark
     fun pipelineMapFilterSink(): List<Int> {
         val result = mutableListOf<Int>()
-        Pipeline.from(list)
+        Pipeline.of(list)
             .map { it.length }
             .filter { it > 5 }
             .sink(result)
-            .pipe()
         return result
     }
+
+    @Benchmark
+    fun pipelineMap(): List<Int> {
+        val result = mutableListOf<Int>()
+        Pipeline.of(list)
+            .map { it.length }
+            .sink(result)
+        return result
+    }
+
+    @Benchmark
+    fun pipelineReduce(): Int {
+        return Pipeline.of(list)
+            .map { it.length }
+            .reduce { acc, i -> acc + i }
+            .get()
+    }
+
+    @Benchmark
+    fun pipelineLargeCollection(): List<Int> {
+        val largeList = (1..100000).map { "item$it" }
+        val result = mutableListOf<Int>()
+        Pipeline.of(largeList)
+            .map { it.length }
+            .filter { it > 5 }
+            .sink(result)
+        return result
+    }
+
+    // ========== Java Streams ==========
 
     @Benchmark
     fun streamMapFilterCollect(): List<Int> {
@@ -40,29 +72,10 @@ open class PipelineBenchmark {
     }
 
     @Benchmark
-    fun pipelineMap(): List<Int> {
-        val result = mutableListOf<Int>()
-        Pipeline.from(list)
-            .map { it.length }
-            .sink(result)
-            .pipe()
-        return result
-    }
-
-    @Benchmark
     fun streamMap(): List<Int> {
         return list.stream()
             .map { it.length }
             .toList()
-    }
-
-    @Benchmark
-    fun pipelineReduce(): Int {
-        val pipeline = Pipeline.from(list)
-            .map { it.length }
-            .reduce { acc, i -> acc + i }
-        pipeline.pipe()
-        return pipeline.reduced()
     }
 
     @Benchmark
@@ -74,23 +87,48 @@ open class PipelineBenchmark {
     }
 
     @Benchmark
-    fun pipelineLargeCollection(): List<Int> {
-        val largeList = (1..100000).map { "item$it" }
-        val result = mutableListOf<Int>()
-        Pipeline.from(largeList)
-            .map { it.length }
-            .filter { it > 5 }
-            .sink(result)
-            .pipe()
-        return result
-    }
-
-    @Benchmark
     fun streamLargeCollection(): List<Int> {
         val largeList = (1..100000).map { "item$it" }
         return largeList.stream()
             .map { it.length }
             .filter { it > 5 }
             .toList()
+    }
+
+    // ========== RxJava ==========
+
+    @Benchmark
+    fun rxJavaMapFilter(): List<Int> {
+        return Flowable.fromIterable(list)
+            .map { it.length }
+            .filter { it > 5 }
+            .toList()
+            .blockingGet()
+    }
+
+    @Benchmark
+    fun rxJavaMap(): List<Int> {
+        return Flowable.fromIterable(list)
+            .map { it.length }
+            .toList()
+            .blockingGet()
+    }
+
+    @Benchmark
+    fun rxJavaReduce(): Int {
+        return Flowable.fromIterable(list)
+            .map { it.length }
+            .reduce { acc, i -> acc + i }
+            .blockingGet() ?: 0
+    }
+
+    @Benchmark
+    fun rxJavaLargeCollection(): List<Int> {
+        val largeList = (1..100000).map { "item$it" }
+        return Flowable.fromIterable(largeList)
+            .map { it.length }
+            .filter { it > 5 }
+            .toList()
+            .blockingGet()
     }
 }
